--- a/static/stat120/Day6.html
+++ b/static/stat120/Day6.html
@@ -266,7 +266,7 @@ Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_d5d2313f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_bd1f8789" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -511,7 +511,7 @@ class: middle
 
 .pull-left-60[
 
-&lt;img src="Day6_files/figure-html/unnamed-chunk-14-1.svg" width="0%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day6_files/figure-html/unnamed-chunk-14-1.svg" width="100%" style="display: block; margin: auto;" /&gt;
 
 ]
 
@@ -662,7 +662,7 @@ relationship.
 
 &lt;br&gt;
 
-.bql[
+.bql.font80[
 Correlation is almost 1, so why not use linear regression!!
 
 - Because the true nature of the relationship is not linear
@@ -695,7 +695,7 @@ Go over the remaining portion of in class activity and let me know if you have a
 ]
 ]
 
-<div class="countdown" id="timer_916a8a3f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_f0f39673" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
