--- a/public/courses/stat120/week3/index.html
+++ b/public/courses/stat120/week3/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Day 6 Slides (pdf/html)" />
+  <meta name="description" content="Day 6 Slides (pdf/html)
+Day 7 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week3/" />
@@ -304,7 +305,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week3/" />
   <meta property="og:title" content="Week 3 | Deepak Bastola" />
-  <meta property="og:description" content="Day 6 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 6 Slides (pdf/html)
+Day 7 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -787,9 +789,8 @@
 
           <div class="article-style">
             <p>Day 6 Slides (<a href="/stat120/Day6.pdf" target="_blank">pdf</a>/<a href="/stat120/Day6.html" target="_blank">html</a>)</p>
+<p>Day 7 Slides (<a href="/stat120/Day7.pdf" target="_blank">pdf</a>/<a href="/stat120/Day7.html" target="_blank">html</a>)</p>
 <!--
-Day 4 Slides (<a href="/stat120/Day4.pdf" target="_blank">pdf</a>/<a href="/stat120/Day4.html" target="_blank">html</a>)
-
 Day 5 Slides (<a href="/stat120/Day5.pdf" target="_blank">pdf</a>/<a href="/stat120/Day5.html" target="_blank">html</a>)
 
 
