--- a/public/courses/stat120/index.html
+++ b/public/courses/stat120/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat120/week5/">Week 5</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week4/">Week 4</a></li>
 
 
