--- a/public/stat120/Day13.html
+++ b/public/stat120/Day13.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- December 26 2022
+ February 03 2023
 
 
 ---
@@ -161,7 +161,9 @@ class: middle
 
 #  `\(\alpha=\)` Probability of Type I Error
 
-.out-t[The significance level `\(\alpha\)` controls the type I error rate.]
+.out-t[
+The significance level `\(\alpha\)` controls the type I error rate.
+]
 
 .pull-left[
 
@@ -191,7 +193,9 @@ class: middle
 
 #  `\(\alpha=\)` Probability of Type I Error
 
-.out-t[The significance level `\(\alpha\)` controls the type I error rate.]
+.out-t[
+The significance level `\(\alpha\)` controls the type I error rate.
+]
 
 .pull-left[
 
@@ -227,17 +231,35 @@ class: middle
 
 # Selecting a significance level
 
-.bq.font80[
+.bq[
 Decreasing `\(\alpha\)` will lower your Type I error rate (makes it harder to reject the null)
-  - but it will also increase your type II error rate (makes it harder to accept a true alternative)]
-.bq.font80[
+  - but it will also increase your type II error rate (makes it harder to accept a true alternative)
+]
+
+---
+
+class: middle
+
+# Selecting a significance level
+
+
+.bq[
 If a Type I error (rejecting a true null) is much worse than a Type II error, we may choose a smaller `\(\alpha\)`, like `\(\alpha=0.01\)` (need lots of evidence to reject null).
-  - E.g. sending an innocent person to jail]
-.bq.font80[
+  - E.g. sending an innocent person to jail
+  ]
+  
+---
+
+class: middle
+
+# Selecting a significance level
+
+.bq[
 If a Type II error (not rejecting a false null) is much worse than a Type I error, we may choose a larger `\(\alpha\)`, like `\(\alpha=0.10\)`
 - E.g. a false negative test for a serious disease
 ]
-]
+
+
 
 ---
 
@@ -255,11 +277,20 @@ The probability of making a Type II Error (not rejecting a false null) depends o
 - Sample size (bigger `\(\mathrm{n}\)` means less uncertainty)
 - Variability of measurements
 - Significance level (bigger `\(\alpha\)` means more false positives but fewer false negatives)]
-&lt;br&gt;
-.bq.font80[
+
+
+
+---
+
+class: middle
+
+# Power of a test
+
+.bql[
 The power of a test is the chance that it will correctly reject the null, or
 `$$1 - \text{Prob(Type II error)}$$`
 ]
+
 
 ---
 
@@ -282,11 +313,22 @@ Informal strength of evidence against H0:
 
 ---
 
-Smaller p-values give us stronger and stronger evidence for the alternative hypothesis.
-Larger p-values indicate little evidence for the alternative hypothesis. 
+class: middle
+
+# Strength of evidence
+
+.bql[
+
+- Smaller p-values give us stronger and stronger evidence for the alternative hypothesis.
+
+- Larger p-values indicate little evidence for the alternative hypothesis. 
+
+]
 
 
 ---
+
+# Example: bootstrap or randomization?
 
 &lt;center&gt;
 &lt;img src="images/day13-4.png" width="60%" height="30%"&gt; &lt;br&gt;
@@ -294,20 +336,25 @@ Larger p-values indicate little evidence for the alternative hypothesis.
 
 ---
 
+# Example: bootstrap or randomization?
+
 &lt;center&gt;
 &lt;img src="images/day13-5.png" width="60%" height="30%"&gt; &lt;br&gt;
 &lt;/center&gt;
 
 ---
 
+class: middle
 
-.bq[
+# Using confidence intervals for hypothesis testing
+
+.bq.font110[
 If a `\(95 \%\)` CI contains the parameter in `\(\mathrm{H}_0\)`, then a two-tailed test should not reject `\(\mathrm{H}_0\)` at a `\(5 \%\)` significance level.
 ]
 
---
+&lt;br&gt;
 
-.bq[
+.bq.font110[
 If a `\(95 \%\)` CI misses the parameter in `\(\mathrm{H}_0\)`, then a two-tailed test should reject `\(\mathrm{H}_0\)` at a `\(5 \%\)` significance level.
 ]
 
@@ -331,6 +378,8 @@ If a `\(95 \%\)` CI misses the parameter in `\(\mathrm{H}_0\)`, then a two-taile
 
 ---
 
+class: middle
+
 # Sample Size and Statistical Significance
 
 .bql[
@@ -340,6 +389,8 @@ If a `\(95 \%\)` CI misses the parameter in `\(\mathrm{H}_0\)`, then a two-taile
 
 ---
 
+# Randomization distribution with `\(n=10\)`
+
 &lt;center&gt;
 &lt;img src="images/day13-8.png" width="60%" height="30%"&gt; &lt;br&gt;
 &lt;/center&gt;
@@ -347,21 +398,29 @@ If a `\(95 \%\)` CI misses the parameter in `\(\mathrm{H}_0\)`, then a two-taile
 
 ---
 
+# Randomization distribution with `\(n=100\)`
+
+
 &lt;center&gt;
 &lt;img src="images/day13-9.png" width="60%" height="30%"&gt; &lt;br&gt;
 &lt;/center&gt;
 
 ---
 
+class: middle
+
 # Multiple Testing/Comparison
 
 
+.bql[
 When multiple hypothesis tests are conducted, the chance that at least one test incorrectly rejects a true null hypothesis increases with the number of tests.
 
-- If the null hypotheses are all true, α of the tests will yield statistically significant results just by random chance.
-
+- If the null hypotheses are all true, `\(\alpha\)` of the tests will yield statistically significant results just by random chance.
+]
 
 ---
+
+class: middle
 
 # Diet and Sex of Baby
 
@@ -376,10 +435,11 @@ When multiple hypothesis tests are conducted, the chance that at least one test 
 
 ---
 
+class: middle
+
 # Diet and Sex of Baby
 
-
-&gt; For each of the 133 foods studied, a hypothesis test was conducted for a difference between mothers who conceived boys and girls in the proportion who consume each food
+.hljs[For each of the 133 foods studied, a hypothesis test was conducted for a difference between mothers who conceived boys and girls in the proportion who consume each food]
 
 
 .bq[What are the null and alternative hypotheses?
@@ -398,6 +458,8 @@ Compare two populations: mothers who have boys vs. mothers who have girls
 
 ---
 
+class: middle
+
 # Diet and Sex of Baby
 
 A significant difference was found for breakfast cereal (mothers of boys eat more), prompting the headline
@@ -409,6 +471,8 @@ How might you explain this?
 .bq[Random chance; several tests (about 6 or 7) are going to be significant, even if no differences exist]
 
 ---
+
+class: middle
 
 # Diet and Sex of Baby
 
@@ -443,9 +507,18 @@ class: action
 &lt;br&gt;
 
 
-<div class="countdown" id="timer_706b5e0e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+.pull-right[
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+
+&gt; Please go over the class activity for today and let me know if you have any questions.
+
+]
+
+<div class="countdown" id="timer_4e102162" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
